added styling and formatted forms

--- a/expressPassportJS/public/index.html
+++ b/expressPassportJS/public/index.html
@@ -10,9 +10,9 @@
 
 
 <body>
-
-        <div style="background-color: aquamarine">
-            <div>
+<div class="basic">
+        <div style="background-color: aquamarine; text-align: center; padding: 10px 10px 10px 10px;">
+            <div style="padding: 10px;">
                 <h1>Sign-up</h1>
                 <form>
                     Email:<br>
@@ -23,10 +23,12 @@
             </div>
 
             <div style="background-color: blueviolet">
+                <div style="text-align: center; padding: 10px;">
                 <h3>Already A Member?</h3>
                 <p>Go ahead and Log-in then!</p>
             </div>
-            <div  style="background-color: rgb(204, 50, 204)">
+            </div>
+            <div  style="background-color: rgb(204, 50, 204);  padding: 10px;">
                 <h1>Login</h1>
                 <form>
                     Email:<br>
@@ -38,8 +40,7 @@
             </div>
 
         </div>
-    </div>
-
+ 
 
 </body>
 
