--- a/expressPassportJS/public/index.html
+++ b/expressPassportJS/public/index.html
@@ -5,37 +5,41 @@
 
     <title>Sign-up!</title>
 
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 
 
 <body>
 <div class="basic">
-        <div style="background-color: aquamarine; text-align: center; padding: 10px 10px 10px 10px;">
-            <div style="padding: 10px;">
+        <div style="background-color: #e0fff9; text-align: center; padding: 10px 10px 10px 10px;">
+            <div id="inner">
                 <h1>Sign-up</h1>
+                <div id="form-font">
                 <form>
                     Email:<br>
-                    <input type="text" name="firstname"><button type="submit">Submit</button><br>
+                    <input type="text" name="firstname"><br>
                     Password:<br>
                     <input type="text" name="lastname"><button type="submit">Submit</button>
                 </form>
             </div>
+            </div>
 
-            <div style="background-color: blueviolet">
+            <div style="background-color: #74d2ff">
                 <div style="text-align: center; padding: 10px;">
                 <h3>Already A Member?</h3>
                 <p>Go ahead and Log-in then!</p>
             </div>
             </div>
-            <div  style="background-color: rgb(204, 50, 204);  padding: 10px;">
+            <div id="inner">
                 <h1>Login</h1>
+                <div id="form-font">
                 <form>
                     Email:<br>
-                    <input type="text" name="firstname"><button type="submit">Submit</button><br>
+                    <input type="text" name="firstname"><br>
                     Password:<br>
                     <input type="text" name="lastname"><button type="submit">Submit</button>
                 </form>
+            </div>
             </div>
             </div>
 
