updated css styling

--- a/expressPassportJS/public/index.html
+++ b/expressPassportJS/public/index.html
@@ -11,7 +11,7 @@
 
 <body>
 <div class="basic">
-        <div style="background-color: #e0fff9; text-align: center; padding: 10px 10px 10px 10px;">
+        <div style="background-color: #dedede; text-align: center; padding: 10px 10px 10px 10px;">
             <div id="inner">
                 <h1>Sign-up</h1>
                 <div id="form-font">
@@ -24,7 +24,7 @@
             </div>
             </div>
 
-            <div style="background-color: #74d2ff">
+            <div id="middle">
                 <div style="text-align: center; padding: 10px;">
                 <h3>Already A Member?</h3>
                 <p>Go ahead and Log-in then!</p>
